# auto-forex-server

./: AGENTS.md  README.md  pyproject.toml
src/auto_forex_server/: __init__.py  providers.py
src/auto_forex_server/events/: __init__.py  bus.py  handlers.py
src/auto_forex_server/orders/: __init__.py  factory.py
src/auto_forex_server/strategies/: __init__.py  factory.py
src/auto_forex_server/tasks/: __init__.py  manager.py  repository.py  runner.py
src/server/: __init__.py  providers.py
src/server/events/: __init__.py  bus.py  handlers.py
src/server/orders/: __init__.py  executor.py  factory.py
src/server/tasks/: __init__.py  manager.py  repository.py  runner.py  types.py
tests/: test_events.py  test_providers.py  test_task_management.py
