[project]
name = "auto-forex-server"
version = "0.1.0"
description = "Server package for AutoForexV2."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "auto-forex-core",
    "oanda",
    "auto-forex-protobuf",
    "auto-forex-snowball",
    "grpcio>=1.81.1",
    "pydantic-settings>=2.14.2",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "ty>=0.0.55",
]

[tool.ruff]
line-length = 100
src = ["src"]
target-version = "py314"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "UP"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.ty.environment]
python-version = "3.14"

[tool.uv.sources]
auto-forex-core = { path = "../core" }
oanda = { path = "../oanda" }
auto-forex-protobuf = { path = "../protobuf" }
auto-forex-snowball = { path = "../snowball" }
